--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -39,3 +39,10 @@
   {{/if}}
   {{/each}}
 </ul>
+
+
+<h2>Add Burger</h2>
+<form class = "addburger">
+<input type = "text" id = "newburger" name="name">
+<button type = "submit">YUM!</button>
+</form>
