--- a/views/partials/TF.handlebars
+++ b/views/partials/TF.handlebars
@@ -9,6 +9,6 @@
 <li>
 {{id}}
 {{burger_name}}
-{{#if devoured}}true{{else}}false  <button data-id = "{{id}}">goes to true</button>
+{{#if devoured}}true{{else}}false  <button data-id = "{{id}}" class = "changestatusbutton">goes to true</button>
 {{/if}}
 </li>
