--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,8 +6,9 @@
 		<title>Meat Only No Veggie!</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/assets/js/burgers.js"></script>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	</head>
-	<body>
+	<body style = "background-color: lightslategray;">
 		{{{ body }}}
 	</body>
 </html>
